<resources>
    <string name="app_name">ProjectEx</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="start">Start</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="register_as_admin">Register as Admin</string>
    <string name="register_as_student">Register as Student</string>
    <string name="password">Password</string>
    <string name="go_to_sign_up">Go To Sign Up</string>
    <string name="go_to_sign_in">Go To Sign In</string>
</resources>